syntax = "proto3";

package claim;

// Represents a single claim in a debate graph
message Claim {
  // Unique identifier for this claim (can be generated by backend)
  string id = 1;

  string title = 2;

  // The textual description or content of the claim
  string description = 3;

  // The ID of this claimâ€™s parent (if it has one)
  string parent_id = 4;

  // Nested child claims
  repeated Claim children = 5;
}
